--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>jQuery Boilerplate</title>
+    <title>ajax-weather</title>
     <!-- add stylesheet -->
     <link rel="stylesheet" href="style/style.css">
 
@@ -13,7 +13,10 @@
   </head>
   <body>
 
-    <h1>jQuery Boilerplate!</h1>
+    <h1>ajax-weather</h1>
+
+    <section id="body">
+    </section>
 
   </body>
 </html>
